# named-entity-recognition

./: .gitignore  0-introduction-to-python-and-text.ipynb  1-basic-text-mining-concepts.ipynb  2-named-entity-recognition-of-henslow-data.ipynb  3-principles-of-machine-learning-for-named-entities.ipynb  4-updating-the-model-on-henslow-data.ipynb  5-linking-named-entities.ipynb  Dockerfile  Dockerfile-deepnote  LICENSE  README.md  pyproject.toml  requirements-minimal.txt  requirements.txt
data/: doccano_ner_test.jsonl  henslow_data_doccano_taxonomy_ner.jsonl  iliad-butler-2199-0-prepped.txt
data/henslow/: README.md  letters_1.xml  letters_10.xml  letters_100.xml  letters_1000.xml  letters_1001.xml  letters_1002.xml  letters_1003.xml  letters_1004.xml  letters_1005.xml  letters_1006.xml  letters_1008.xml  letters_1009.xml  letters_101.xml  letters_1010.xml  letters_1011.xml  letters_1012.xml  letters_1013.xml  letters_1014.xml  letters_1015.xml  letters_1016.xml  letters_1017.xml  letters_1018.xml  letters_1019.xml  letters_102.xml  letters_1020.xml  letters_1021.xml  letters_1022.xml  letters_1023.xml  letters_1024.xml  letters_1025.xml  letters_1026.xml  letters_1027.xml  letters_1028.xml  letters_1029.xml  letters_103.xml  letters_1030.xml  letters_1031.xml  letters_1032.xml  (+992 more)
doccano/: doccano_named_ents.py
html_notebooks/: 0-introduction-to-python-and-text.html  1-basic-text-mining-concepts.html  2-named-entity-recognition-of-henslow-data.html  3-principles-of-machine-learning-for-named-entities.html  4-updating-the-model-on-henslow-data.html
tests/: conftest.py  test_doccano_named_ents.py
(+3 files in other folders)
